<resources>
    <string name="app_name">BP Demo</string>
    <string name="add_money_desc">Add money to your wallet and make payment</string>
    <string name="recommended">Recommended</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="cancel">Cancel</string>
    <string name="recharge">Recharge</string>
    <string name="enter_amount">Enter amount</string>
    <string name="clock_Activity">Clock Activity</string>
    <string name="title">Head Clock</string>
</resources>