<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_money_desc"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:gravity="start"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/amountET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_box"
        android:padding="15dp"
        android:inputType="number"
        android:layout_marginTop="15dp"
        android:drawableEnd="@drawable/ic_rupee"
        android:hint="@string/enter_amount" ></EditText>

        <TextView
            android:id="@+id/amountError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_amount"
            android:visibility="gone"
            android:textColor="#FF0000"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:textSize="16sp" />

       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recommended"
        android:textColor="#000000"
           android:textStyle="bold"
           android:layout_marginTop="15dp"
        android:gravity="start"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="3"
        >
        <com.google.android.material.button.MaterialButton

            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14dp"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="2dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/purple_200"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="₹ 2000" />
        <com.google.android.material.button.MaterialButton

            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:strokeWidth="2dp"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="2dp"
            android:textSize="14dp"
            app:strokeColor="@color/purple_200"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_weight="1"
            android:text="₹ 5,000" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:strokeWidth="2dp"
            android:layout_marginHorizontal="2dp"
            android:paddingVertical="10dp"
            android:textSize="14dp"
            app:strokeColor="@color/purple_200"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_weight="1"
            android:text="₹ 7,000" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_mode"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        android:gravity="start"
        android:textStyle="bold"
        android:textSize="16sp" />
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="Online" />

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="UPI" />

    </RadioGroup>
        <TextView
            android:id="@+id/radioGroupError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select payment mode"
            android:textColor="#FF0000"
            android:visibility="gone"
            android:gravity="start"
            android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:strokeWidth="2dp"
            android:layout_marginHorizontal="2dp"
            android:paddingVertical="15dp"
            app:strokeColor="@color/purple_200"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_weight="1"
            android:text="Cancel" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/recharge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recharge"
            android:layout_marginStart="7dp"
            android:layout_weight="1"
            app:backgroundTint="@color/purple_200"
            android:paddingVertical="15dp"
            android:textColor="@color/white"

             />

    </LinearLayout>
    </LinearLayout>




</RelativeLayout>
